Synced the logic for track natural key with information available in catalog files.